# irohscii

./: .gitignore  Cargo.toml  README.md  STUDY_GUIDE.md  flake.nix
.agent/: plan.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.pi/: prompt-history.jsonl
crates/iroh-collab/: Cargo.toml
crates/iroh-collab/src/: document.rs  lib.rs  peer.rs  presence.rs
crates/iroh-collab/src/backends/: automerge.rs  mod.rs
crates/iroh-collab/src/sync/: mod.rs  presence_protocol.rs  protocol.rs
crates/irohscii-core/: Cargo.toml
crates/irohscii-core/src/: document.rs  layers.rs  lib.rs  shapes.rs
crates/irohscii-export/: Cargo.toml
crates/irohscii-export/src/: ascii.rs  lib.rs  svg.rs
crates/irohscii-geometry/: Cargo.toml
crates/irohscii-geometry/src/: lib.rs
crates/irohscii-session/: Cargo.toml
crates/irohscii-session/src/: lib.rs  session.rs  undo.rs
crates/irohscii-sync/: Cargo.toml
crates/irohscii-sync/src/: lib.rs  peer.rs  presence.rs
crates/irohscii-sync/src/sync/: local_store.rs  mod.rs  presence_protocol.rs  protocol.rs
src/: actions.rs  app.rs  canvas.rs  dispatch.rs  document.rs  file_io.rs  keybindings.rs  layers.rs  leader_menu.rs  lib.rs  main.rs  presence.rs  recent_files.rs  session.rs  shapes.rs  svg_export.rs  ui.rs  undo.rs
src/app/: alignment.rs  clipboard.rs  mod.rs  qr.rs  transform.rs  zorder.rs
src/modes/: confirm.rs  help.rs  keyboard_shape.rs  label_input.rs  layer_rename.rs  leader.rs  mod.rs  normal.rs  path_input.rs  popup.rs  qr_code.rs  recent_files.rs  session.rs  text_input.rs
src/sync/: mod.rs  presence_protocol.rs  protocol.rs
src/tools/: arrow.rs  cloud.rs  cylinder.rs  diamond.rs  doublebox.rs  ellipse.rs  freehand.rs  hexagon.rs  line.rs  mod.rs  parallelogram.rs  rectangle.rs  roundedrect.rs  select.rs  star.rs  text.rs  trapezoid.rs  triangle.rs
tests/: cluster_e2e.rs  sync_integration.rs
