[package]
name = "irohscii"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = [
    "all-widgets",
    "macros",
    "serde",
    "palette",
    "underline-color",
    "scrolling-regions",
    "unstable",
] }
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1.0"

# Sync dependencies
tokio = { version = "1", features = ["rt", "sync", "macros"] }
iroh = "0.95"
iroh-base = "0.95"
data-encoding = "2"
automerge = "0.7"
postcard = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
n0-future = "0.3"
