[workspace]
resolver = "2"
members = [
    "crates/irohscii-geometry",
    "crates/irohscii-core",
    "crates/irohscii-sync",
    "crates/irohscii-export",
    "crates/irohscii-session",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/irohscii"

[workspace.dependencies]
# Internal crates
irohscii-geometry = { path = "crates/irohscii-geometry" }
irohscii-core = { path = "crates/irohscii-core" }
irohscii-sync = { path = "crates/irohscii-sync" }
irohscii-export = { path = "crates/irohscii-export" }
irohscii-session = { path = "crates/irohscii-session" }
aspen-automerge = { git = "https://github.com/brittonr/aspen.git", rev = "7a257c04" }

# Terminal UI
ratatui = { version = "0.30.0", features = [
    "all-widgets",
    "macros",
    "serde",
    "palette",
    "underline-color",
    "scrolling-regions",
    "unstable",
] }
crossterm = { version = "0.29", features = ["event-stream"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# P2P networking
iroh = "0.95"
iroh-base = "0.95"

# CRDT
automerge = "0.7"

# Encoding
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
postcard = "1.0"
data-encoding = "2"

# QR codes
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.10"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
n0-future = "0.3"
async-trait = "0.1"
hex = "0.4"

# Dev dependencies
proptest = "1.4"
tempfile = "3"
tokio-test = "0.4"

# Main binary package
[package]
name = "irohscii"
version.workspace = true
edition.workspace = true

[dependencies]
irohscii-geometry = { workspace = true }
irohscii-core = { workspace = true }
irohscii-sync = { workspace = true }
irohscii-export = { workspace = true }
irohscii-session = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
automerge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
postcard = { workspace = true }
data-encoding = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing-subscriber = { workspace = true }
n0-future = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rqrr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
