[package]
name = "iroh-collab"
description = "Generic P2P collaboration infrastructure using Iroh networking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Automerge CRDT backend
automerge = ["dep:automerge"]

[dependencies]
# Networking
iroh = { workspace = true }
iroh-base = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
rmp-serde = { workspace = true }
postcard = { workspace = true }
data-encoding = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Optional: Automerge CRDT backend
automerge = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
