[package]
name = "irohscii-session"
description = "Session management and undo history for irohscii"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
irohscii-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
automerge = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
