[package]
name = "irohscii-sync"
description = "P2P synchronization for irohscii using Iroh and Automerge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
irohscii-geometry = { workspace = true }
irohscii-core = { workspace = true }
serde = { workspace = true }
automerge = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
data-encoding = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
ratatui = { workspace = true }
n0-future = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
